[package]
name = "binary_raster"
version = "0.1.5"
edition = "2021"
description = "Binary raster crate for efficient pixel-based collision detection"
license = "Unlicense"
repository = "https://github.com/Inspirateur/binary_raster"
keywords = ["raster", "binary", "collision", "bitmap", "2d"]

[dependencies]

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "raster"
harness = false